<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory android:title="@string/pref_header_general">

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_start_page_list_titles"
            android:entryValues="@array/pref_start_page_list_values"
            android:key="default_start_page"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_set_default_start_page" />

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEListPreference
            android:defaultValue="light"
            android:entries="@array/pref_general_theme_list_titles"
            android:entryValues="@array/pref_general_theme_list_values"
            android:key="general_theme"
            android:enabled="false"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_general_theme" />

        <com.kabouzeid.appthemehelper.common.prefs.supportv7.ATESwitchPreference
            android:defaultValue="true"
            android:key="tab_icons"
            android:persistent="false"
            android:summary="@string/pref_summary_tab_icons"
            android:title="@string/pref_title_tab_icons" />

    </com.kabouzeid.appthemehelper.common.prefs.supportv7.ATEPreferenceCategory>

</android.support.v7.preference.PreferenceScreen>
