<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_toggle_favorite"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        android:orderInCategory="1"
        android:title="@string/action_add_to_favorites"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_open_playing_queue"
        android:icon="@drawable/ic_queue_music_white_24dp"
        android:orderInCategory="2"
        android:title="@string/open_playing_queue"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_open_menu"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:orderInCategory="3"
        android:title="@string/more_options"
        app:showAsAction="always" />

</menu>
