<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    tools:context=".ui.activities.SupportDevelopmentActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:background="?colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="?colorPrimary"
            app:layout_collapseMode="pin"
            app:navigationIcon="@drawable/ic_close_white_24dp"
            app:title="@string/support_development" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/donation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/donation_header"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="?attr/colorAccent" />

            <LinearLayout
                android:id="@+id/progress_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/md_content_padding_top"
                android:paddingLeft="@dimen/md_dialog_frame_margin"
                android:paddingRight="@dimen/md_dialog_frame_margin"
                android:paddingTop="@dimen/md_content_padding_top">

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="start"
                    android:paddingLeft="16dp"
                    android:text="@string/loading_products"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="6dp"
                android:paddingStart="6dp"
                android:scrollbarStyle="outsideOverlay" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>